--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,20 @@
 sudo: true
 language: generic
+
 os:
   - linux
   - osx
+
 addons:
   apt:
     packages:
       - build-essential
+
 before_install:
-  # Install OSX dependencies
-  # - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install mercurial; fi;
-  # Install Linux dependencies
-  # - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get -qq update; fi;
-  # - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install -y mercurial; fi;
   # Set LOCAL for correct ZSH compilaction
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then LOCAL=/usr/local; fi;
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then LOCAL=/tmp; fi;
-  # Donwload, install and compile ZSH 5.2
+  # Download, install and compile Zsh 5.2
   - curl -L https://sourceforge.net/projects/zsh/files/zsh/5.2/zsh-5.2.tar.gz/download | tar zx
   - cd zsh-5.2
   - ./configure --prefix=$LOCAL > /dev/null
@@ -24,12 +22,16 @@ before_install:
   - make install
   - cd -
   - export PATH="$LOCAL/bin:$PATH"
+
 install:
   - sudo chsh -s $(which zsh)
+
 before_script:
   - zsh --version
+
 script:
   - scripts/tests.sh
+
 jobs:
   include:
     - stage: deploy gitbook
@@ -44,3 +46,8 @@ jobs:
        committer-from-gh: true
        keep-history: true
        local-dir: _book
+
+notifications:
+  email:
+    on_success: change #[always|never|change]
+    on_failure: always #[always|never|change]
